Bug 957490 - Fix initialization of MouseEvent.buttons on Metro [r=jimm]